k2s/test/e2e/addons/generic/build_image/weather-win/weather.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-win
spec:
  selector:
    matchLabels:
      app: weather-win
  replicas: 1
  template:
    metadata:
      labels:
        app: weather-win
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: weather-win
          image: k2s.registry.local/weather-win:99
          ports:
            - containerPort: 80
      nodeSelector:
        kubernetes.io/os: windows
      tolerations:
        - key: "OS"
          operator: "Equal"
          value: "Windows"
          effect: "NoSchedule"         
---
apiVersion: v1
kind: Service
metadata:
  name: weather-win
spec:
  selector:
    app: weather-win
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.21.0.210
---
