k2s/test/e2e/addons/generic/build_image/weather-win/ing-nginx.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-win
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
        - path: /weather-win
          pathType: Prefix
          backend:
            service:
              name: weather-win
              port:
                number: 80
